--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,32 @@
 p{
     color: red;
 }
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+  }
+li{
+    display: inline;
+}
+.header{
+    display: flex;
+    align-items: flex-start;
+    justify-content: right;
+
+}
+.google-logo{
+    display: flex;
+    justify-content: center;
+
+}
+.search-bar{
+    display: flex;
+    justify-content: center;
+
+}
+.footer{
+    display: flex;
+    align-content: flex-end;
+
+}
