--- a/styles/style.css
+++ b/styles/style.css
@@ -1,32 +1,139 @@
-p{
-    color: red;
-}
+
 ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
+    list-style-type: none;   
   }
 li{
     display: inline;
+    margin: center;
 }
 .header{
     display: flex;
-    align-items: flex-start;
-    justify-content: right;
-
+    flex-direction: row;
+    justify-content: flex-end;
+    align-items: center;
+    margin-bottom: 40px;
+    
+}
+.gmail{
+    
+    margin: 5px;
+}
+.images{
+    
+    margin: 5px;
+}
+.menu{
+    
+    justify-content: center;
+    align-self: center;
+}
+.connexion-button{
+    background: #1a73e8;
+    color: #fff;
+    border: 1px solid transparent;
+    cursor: pointer;
+    font-family: Google Sans,Roboto,RobotoDraft,Helvetica,Arial,sans-serif;
+    font-weight: 500;
+    font-size: 14px;
+    letter-spacing: .25px;
+    line-height: 16px;
+    margin-left: 10px;
+    margin-right: 8px;
+    min-width: 96px;
+    padding: 9px 23px;
+    text-align: center;
+    vertical-align: middle;
+    border-radius: 4px;
+    box-sizing: border-box;
 }
 .google-logo{
     display: flex;
     justify-content: center;
-
+    
+}
+#google-logo{
+    width: 272px;
+    height: 92px;
+}
+.search{
+    display: flex;
+    justify-content: center;
+    
+}
+.search-form{
+    
+    
 }
 .search-bar{
     display: flex;
     justify-content: center;
+    width: auto;
+    max-width: 584px;
+    border: 1px solid #dfe1e5;s
+    box-shadow: none;
+    border-radius: 24px;
+    height: 44px;
+    /*margin: 0 auto;*/
+}
+#search-bar{
+    border: none;
+}
+
+.search-buttons{
+    margin-top: 18px;
+    display: flex;
+    flex-direction: row;
+    max-width: 584px;
+}
+.search-button{
+    display: flex;
 
 }
-.footer{
+#search-button{
+    box-shadow: 0 1px 1px rgba(0,0,0,.1);
+    background-color: #f8f9fa;
+    border: 1px solid #dadce0;
+    color: #202124;
+    border-radius: 4px;
+    font-family: arial,sans-serif;
+    font-size: 14px;
+    margin: 11px 4px;
+    padding: 0 16px;
+    line-height: 27px;
+    height: 36px;
+    min-width: 54px;
+    text-align: center;
+    cursor: pointer;
+}
+.get-lucky{
     display: flex;
-    align-content: flex-end;
+}
+#get-lucky{
+    box-shadow: 0 1px 1px rgba(0,0,0,.1);
+    background-color: #f8f9fa;
+    border: 1px solid #dadce0;
+    color: #202124;
+    border-radius: 4px;
+    font-family: arial,sans-serif;
+    font-size: 14px;
+    margin: 11px 4px;
+    padding: 0 16px;
+    line-height: 27px;
+    height: 36px;
+    min-width: 54px;
+    text-align: center;
+    cursor: pointer;
+}
+.empty-space{
+     
+    /*flex-grow: 1;
+    flex-shrink: 0;
+    box-sizing: border-box;*/
+}
+.footer{
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    background: #f2f2f2;
 
 }
